# obos

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  contribution.md
src/drivers/generic/ehci/: CMakeLists.txt  ehci_irq.c  main.c  reset.c  structs.h
src/drivers/generic/extfs/: CMakeLists.txt  create.c  dirent.c  helper.c  interface.c  main.c  probe.c  structs.h
src/drivers/generic/fat/: CMakeLists.txt  interface.c  lookup.c  main.c  probe.c  structs.h
src/drivers/generic/freebsd-e1000/: CMakeLists.txt  dev.h  device-ids.h  e1000_osdep.h  io.c  main.c  managarm-LICENSE
src/drivers/generic/initrd/: CMakeLists.txt  main.c  name.h  parse.c  parse.h  ustar_hdr.h
src/drivers/generic/libps2/: CMakeLists.txt  controller.h  detect.c  detect.h  keyboard.c  keyboard.h  main.c  mouse.c  mouse.h  ringbuffer.h  scancode_tables.h
src/drivers/generic/r8169/: CMakeLists.txt  device.c  main.c  structs.h
src/drivers/generic/slowfat/: CMakeLists.txt  alloc.h  cls_alloc.c  create.c  fat_irp.c  interface.c  io.c  lookup.c  main.c  probe.c  structs.h
src/drivers/generic/usb-hid/: CMakeLists.txt  main.c  scancodes.h
src/drivers/generic/usb-kbd/: CMakeLists.txt  main.c
src/drivers/generic/xhci/: CMakeLists.txt  init.c  irp.c  main.c  structs.h  xhci.c  xhci.h
src/drivers/testDriver/: CMakeLists.txt  main.cpp
src/drivers/test_driver/: CMakeLists.txt  fireworks.c  main.c  rand.c  rand.h  sin_table.h
src/drivers/x86/bochs_vbe/: CMakeLists.txt  io.c  io.h  main.c  suspend.c
src/drivers/x86/i8042/: CMakeLists.txt  ctlr.c  main.c  ps2_irql.h  ps2_structs.h
src/init/: CMakeLists.txt  allocator.c  allocator.h  m68k-syscall.S  main.c  motd.c  nm.c  nm.h  syscall.h  x86_64-syscall.S
src/oboskrnl/: CMakeLists.txt  cmdline.c  cmdline.h  console.cpp  console.h  dev_prefix.h  error.h  execve.c  execve.h  export.h  fb.h  font.h  gpt.c  gpt.h  handle.c  handle.h  init_proc.c  init_proc.h  int.h  kinit.c  kinit.h  klog.c  klog.cpp  klog.h  kmain.cpp  mbr.c  mbr.h  memmanip.c  memmanip.h  new  partition.c  partition.h  perm.c  perm.h  sig_sys.c  signal.c  signal.h  signal_def.h  struct_packing.h  syscall.c  (+4 more)
src/oboskrnl/allocators/: allocator.cpp  allocator.h  base.h  basic_allocator.c  basic_allocator.cpp  basic_allocator.h  liballoc.cpp  slab.cpp  slab.h  slab_structs.h
src/oboskrnl/arch/: driver_interface_load.h  irq_register.h  sched_timer.h  smp_cpu_func.h  smp_cpu_local.h  thr_context_info.h  vmm_context.h  vmm_defines.h  vmm_map.h
src/oboskrnl/arch/m68k/: asm_helpers.S  asm_helpers.h  boot_info.h  cpu_local_arch.h  driver_loader.c  entry.c  exception_handlers.c  execve.c  gf_tty.c  goldfish_pic.c  goldfish_pic.h  goldfish_rtc.c  goldfish_rtc.h  initial_swap.c  interrupt_frame.h  irq.c  irql.c  isr.S  memmanip.c  mmu.c  pmm.c  pmm.h  syscall.c  thread_ctx.S  thread_ctx.c  thread_ctx.h
src/oboskrnl/arch/x86_64/: asm_helpers.asm  asm_helpers.h  bgdt.asm  boot_info.h  cmos.c  cmos.h  cpu_local_arch.h  cpu_utils.h  driver_interface_load.cpp  driver_interface_load.h  drv_loader.c  entry.asm  entry.c  entry.cpp  except.c  exception_handlers.cpp  execve.c  hpet_table.h  (+44 more)
src/oboskrnl/contrib/: csprng.c  random.h  tjec.c
src/oboskrnl/driver_interface/: driverId.h  drv_sys.c  drv_sys.h  header.h  loader.c  loader.cpp  loader.h  loader64.cpp  pci.c  pci.h  pci_irq.c  pnp.c  pnp.h  usb.c  usb.h
src/oboskrnl/elf/: elf.h  elf32.h  elf64.h  load.c  load.h
src/oboskrnl/irq/: dpc.c  dpc.h  irq.c  irq.cpp  irq.h  irql.c  irql.cpp  irql.h  irql_arch.h  timer.c  timer.h
src/oboskrnl/locks/: event.c  event.h  mutex.c  mutex.h  pushlock.c  pushlock.h  rw_lock.c  rw_lock.h  semaphore.c  semaphore.h  spinlock.c  spinlock.cpp  spinlock.h  sys_futex.c  sys_futex.h  wait.c  wait.h
src/oboskrnl/mm/: aging.c  alloc.c  alloc.h  bare_map.c  bare_map.h  context.c  context.h  disk_swap.c  disk_swap.h  fork.c  fork.h  handler.c  handler.h  init.c  init.h  initial_swap.c  initial_swap.h  mm_sys.c  mm_sys.h  page.h  page_table.h  pg_node.h  pmm.c  pmm.h  prot.h  sglist.h  swap.c  swap.h
src/oboskrnl/net/: arp.c  arp.h  eth.c  eth.h  frame.h  icmp.c  icmp.h  ip.c  ip.h  lo.c  lo.h  macros.h  nic_data.h  route.c  tables.h  tcp.c  tcp.h  udp.c  udp.h
src/oboskrnl/power/: device.c  device.h  event.c  event.h  init.c  init.h  shutdown.c  shutdown.h  suspend.c  suspend.h
src/oboskrnl/sanitizers/: asan.c  asan.cpp  asan.h  asan_memory.c  stack.c  ubsan.c  ubsan.cpp
src/oboskrnl/scheduler/: cpu_local.h  dpc.c  dpc.h  init.cpp  init.h  process.c  process.h  sched_sys.c  sched_sys.h  schedule.c  schedule.h  scheduler.cpp  scheduler.h  stack.h  thread.c  thread.cpp  thread.h  thread_context_info.h  ticks.h
src/oboskrnl/utils/: hashmap.c  hashmap.h  list.h  shared_ptr.c  shared_ptr.h  string.c  string.h  tree.h  uuid.c  uuid.h  vector.h
src/oboskrnl/vfs/: alloc.c  alloc.h  async.c  block_device.h  create.c  create.h  cwd.cpp  cwd.h  dirent.c  dirent.h  dummy_devices.c  fd.c  fd.h  fd_sys.c  fd_sys.h  file_attributes.h  file_perms.h  fsnode.h  index_node.h  init.c  init.h  irp.h  keycode.h  limits.h  local_socket.c  local_socket.h  mount.c  mount.h  mouse.h  namecache.h  off_t.h  open.cpp  pagecache.c  pagecache.h  pipe.c  pipe.h  pty.c  socket.c  socket.h  stat.h  (+5 more)
src/oboskrnl/vmm/: demand_paging.cpp  init.cpp  init.h  map.cpp  map.h  mprot.cpp  mprot.h  page_descriptor.h  page_fault_reason.h  page_node.h  pg_context.cpp  pg_context.h  prot.h
src/sanitizers/: CMakeLists.txt  asan.c  asan.h  asan_memory.c  prof.c  prof.h  stack.c
src/uACPI/: CMakeLists.txt  ec.c  kernel_api.c  uacpi_arch_helpers.h  uacpi_libc.h
src/uHDA/: CMakeLists.txt  hdadev.c  kernel_api.c
src/user-utilities/: CMakeLists.txt  ldmod.c  login.c  mem-usage.c  obos-ifconfig.c  rmmod.c  swapon.c  umount.c  x86_enable-kgdbstub.c  x86_obos-gettime.c
src/user_examples/: CMakeLists.txt  fork_example.c  klog_level_example.c  lsmod_example.c  mem_usage_example.c  mkswap_example.c  mount_example.c  powerctl_example.c  rmmod_example.c  stmod_example.c  sync_anon_example.c  umount_example.c  x86_timeofday_example.c
(+123 files in other folders)
